# invest-ai

./: .env  .env.example  LICENSE  README.md  app.py  main.py  pyproject.toml  report.txt  test_technical.py
src/invest_ai/: __init__.py  config.py
src/invest_ai/agents/: __init__.py  comparison.py  dividend.py  fundamental.py  graph.py  live_intel.py  live_news.py  moat.py  news.py  screener.py  state.py  supervisor.py  synthesizer.py  technical.py
src/invest_ai/tools/: __init__.py  fundamentals.py  live_intel.py  news.py  stock_data.py  technical.py
src/invest_ai/utils/: __init__.py  dashboards.py  formatters.py  pdf.py  ticker.py
