[project]
name = "invest-ai"
version = "0.1.0"
description = "Agentic AI stock research platform for Indian and US markets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3",
    "langchain-ollama>=0.2",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "yfinance>=0.2",
    "streamlit>=1.35",
    "plotly>=5.22",
    "ddgs>=6.0",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "ta>=0.11",
    "requests>=2.31",
    "lxml>=5.2",
    "beautifulsoup4>=4.12",
    "html5lib>=1.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
